k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: morpheus-poc-app
  namespace: morpheus-poc
  labels:
    app: morpheus-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: morpheus-poc
  template:
    metadata:
      labels:
        app: morpheus-poc
    spec:
      restartPolicy: Always
      containers:
      - name: morpheus-poc
        image: nixndme/morpheus-poc-request:20
        imagePullPolicy: Always
        ports:
          - containerPort: 3001
            protocol: TCP

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5

        readinessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3

        volumeMounts:
          - name: morpheus-poc-vol
            mountPath: /app/data
      volumes:
        - name: morpheus-poc-vol
          persistentVolumeClaim:
            claimName: morpheus-poc-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: morpheus-poc-svc
  namespace: morpheus-poc
  labels:
    app: morpheus-poc
spec:
  selector:
    app: morpheus-poc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morpheus-poc-ingress
  namespace: morpheus-poc
  labels:
    app: morpheus-poc
spec:
  rules:
    - host: pocrequest.init0xff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: morpheus-poc-svc
                port:
                  number: 80
